// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing <GifExpertApp /> should show correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setcategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Testing <GifExpertApp /> should show list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setcategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="madrid"
      key="madrid"
    />
    <GifGrid
      category="murcia"
      key="murcia"
    />
    <GifGrid
      category="zaragoza"
      key="zaragoza"
    />
  </ol>
</Fragment>
`;
